MAINTAINERCLEANFILES	= Makefile.in

# install
bashcompletiondir	= $(prefix)/share/bash-completion/completions/
dist_bashcompletion_DATA= bash_completion/pcs

snmpmibsdir		= $(SNMP_MIB_DIR)
dist_snmpmibs_DATA	= snmp/mibs/PCMK-PCS-MIB.txt \
			  snmp/mibs/PCMK-PCS-V1-MIB.txt

dist_man8_MANS		= pcs.8 snmp/pcs_snmp_agent.8

sysconfigdir		= $(CONF_DIR)
dist_sysconfig_DATA	= snmp/conf/pcs_snmp_agent

servicedir		= $(SYSTEMD_UNIT_DIR)
service_DATA		= snmp/pcs_snmp_agent.service

EXTRA_DIST		= \
			  node.py \
			  daemon/log.py \
			  daemon/env.py \
			  daemon/ruby_pcsd.py \
			  daemon/app/sinatra_ui.py \
			  daemon/app/sinatra_remote.py \
			  daemon/app/sinatra_common.py \
			  daemon/app/test/__init__.py \
			  daemon/app/ui.py \
			  daemon/app/common.py \
			  daemon/app/session.py \
			  daemon/app/ui_common.py \
			  daemon/app/__init__.py \
			  daemon/auth.py \
			  daemon/http_server.py \
			  daemon/ssl.py \
			  daemon/run.py \
			  daemon/session.py \
			  daemon/__init__.py \
			  daemon/systemd.py \
			  usage.py \
			  constraint.py \
			  common/dr.py \
			  common/node_communicator.py \
			  common/file_type_codes.py \
			  common/host.py \
			  common/str_tools.py \
			  common/reports/dto.py \
			  common/reports/messages.py \
			  common/reports/item.py \
			  common/reports/constraints/order.py \
			  common/reports/constraints/common.py \
			  common/reports/constraints/ticket.py \
			  common/reports/constraints/__init__.py \
			  common/reports/constraints/colocation.py \
			  common/reports/codes.py \
			  common/reports/processor.py \
			  common/reports/const.py \
			  common/reports/__init__.py \
			  common/reports/types.py \
			  common/file.py \
			  common/ssl.py \
			  common/fencing_topology.py \
			  common/pcs_pycurl.py \
			  common/interface/dto.py \
			  common/interface/__init__.py \
			  common/tools.py \
			  common/pacemaker/nvset.py \
			  common/pacemaker/resource/relations.py \
			  common/pacemaker/resource/__init__.py \
			  common/pacemaker/__init__.py \
			  common/pacemaker/rule.py \
			  common/__init__.py \
			  common/types.py \
			  pcs_internal.py \
			  client.py \
			  app.py \
			  lib/sbd.py \
			  lib/node.py \
			  lib/env.py \
			  lib/communication/corosync.py \
			  lib/communication/sbd.py \
			  lib/communication/nodes.py \
			  lib/communication/cluster.py \
			  lib/communication/booth.py \
			  lib/communication/qdevice.py \
			  lib/communication/qdevice_net.py \
			  lib/communication/status.py \
			  lib/communication/tools.py \
			  lib/communication/__init__.py \
			  lib/commands/sbd.py \
			  lib/commands/dr.py \
			  lib/commands/node.py \
			  lib/commands/cluster.py \
			  lib/commands/constraint/order.py \
			  lib/commands/constraint/common.py \
			  lib/commands/constraint/ticket.py \
			  lib/commands/constraint/__init__.py \
			  lib/commands/constraint/colocation.py \
			  lib/commands/stonith.py \
			  lib/commands/remote_node.py \
			  lib/commands/booth.py \
			  lib/commands/qdevice.py \
			  lib/commands/pcsd.py \
			  lib/commands/resource_agent.py \
			  lib/commands/alert.py \
			  lib/commands/fencing_topology.py \
			  lib/commands/stonith_agent.py \
			  lib/commands/tag.py \
			  lib/commands/status.py \
			  lib/commands/cib_options.py \
			  lib/commands/quorum.py \
			  lib/commands/__init__.py \
			  lib/commands/resource.py \
			  lib/commands/acl.py \
			  lib/exchange_formats.md \
			  lib/cib/node.py \
			  lib/cib/sections.py \
			  lib/cib/nvpair.py \
			  lib/cib/nvpair_multi.py \
			  lib/cib/constraint/constraint.py \
			  lib/cib/constraint/order.py \
			  lib/cib/constraint/ticket.py \
			  lib/cib/constraint/resource_set.py \
			  lib/cib/constraint/__init__.py \
			  lib/cib/constraint/colocation.py \
			  lib/cib/stonith.py \
			  lib/cib/alert.py \
			  lib/cib/resource/operations.py \
			  lib/cib/resource/hierarchy.py \
			  lib/cib/resource/bundle.py \
			  lib/cib/resource/guest_node.py \
			  lib/cib/resource/relations.py \
			  lib/cib/resource/remote_node.py \
			  lib/cib/resource/group.py \
			  lib/cib/resource/common.py \
			  lib/cib/resource/clone.py \
			  lib/cib/resource/primitive.py \
			  lib/cib/resource/__init__.py \
			  lib/cib/rule/in_effect.py \
			  lib/cib/rule/cib_to_str.py \
			  lib/cib/rule/parsed_to_cib.py \
			  lib/cib/rule/cib_to_dto.py \
			  lib/cib/rule/expression_part.py \
			  lib/cib/rule/tools.py \
			  lib/cib/rule/parser.py \
			  lib/cib/rule/__init__.py \
			  lib/cib/rule/validator.py \
			  lib/cib/fencing_topology.py \
			  lib/cib/tag.py \
			  lib/cib/status.py \
			  lib/cib/tools.py \
			  lib/cib/__init__.py \
			  lib/cib/acl.py \
			  lib/node_communication_format.py \
			  lib/resource_agent.py \
			  lib/xml_tools.py \
			  lib/dr/env.py \
			  lib/dr/config/facade.py \
			  lib/dr/config/__init__.py \
			  lib/dr/__init__.py \
			  lib/errors.py \
			  lib/validate.py \
			  lib/node_communication.py \
			  lib/file/toolbox.py \
			  lib/file/metadata.py \
			  lib/file/instance.py \
			  lib/file/raw_file.py \
			  lib/file/__init__.py \
			  lib/interface/config.py \
			  lib/interface/__init__.py \
			  lib/corosync/constants.py \
			  lib/corosync/live.py \
			  lib/corosync/node.py \
			  lib/corosync/config_facade.py \
			  lib/corosync/qdevice_client.py \
			  lib/corosync/qdevice_net.py \
			  lib/corosync/config_parser.py \
			  lib/corosync/config_validators.py \
			  lib/corosync/__init__.py \
			  lib/tools.py \
			  lib/pacemaker/live.py \
			  lib/pacemaker/state.py \
			  lib/pacemaker/simulate.py \
			  lib/pacemaker/values.py \
			  lib/pacemaker/__init__.py \
			  lib/__init__.py \
			  lib/booth/constants.py \
			  lib/booth/env.py \
			  lib/booth/config_facade.py \
			  lib/booth/config_parser.py \
			  lib/booth/sync.py \
			  lib/booth/config_validators.py \
			  lib/booth/config_files.py \
			  lib/booth/status.py \
			  lib/booth/__init__.py \
			  lib/booth/resource.py \
			  stonith.py \
			  host.py \
			  config.py \
			  qdevice.py \
			  settings.py \
			  pcsd.py \
			  alert.py \
			  run.py \
			  status.py \
			  quorum.py \
			  __init__.py \
			  prop.py \
			  snmp/conf/pcs_snmp_agent \
			  snmp/updaters/v1.py \
			  snmp/updaters/__init__.py \
			  snmp/pcs_snmp_agent.8 \
			  snmp/agentx/updater.py \
			  snmp/agentx/__init__.py \
			  snmp/agentx/types.py \
			  snmp/mibs/PCMK-PCS-MIB.txt \
			  snmp/mibs/PCMK-PCS-V1-MIB.txt \
			  snmp/pcs_snmp_agent.py \
			  snmp/__init__.py \
			  rule.py \
			  cli/dr.py \
			  cli/common/env_cli.py \
			  cli/common/routing.py \
			  cli/common/completion.py \
			  cli/common/capabilities.py \
			  cli/common/middleware.py \
			  cli/common/errors.py \
			  cli/common/lib_wrapper.py \
			  cli/common/printable_tree.py \
			  cli/common/__init__.py \
			  cli/common/parse_args.py \
			  cli/constraint/command.py \
			  cli/constraint/__init__.py \
			  cli/constraint/parse_args.py \
			  cli/nvset.py \
			  cli/tag/command.py \
			  cli/tag/__init__.py \
			  cli/reports/messages.py \
			  cli/reports/output.py \
			  cli/reports/processor.py \
			  cli/reports/__init__.py \
			  cli/constraint_ticket/command.py \
			  cli/constraint_ticket/__init__.py \
			  cli/constraint_ticket/parse_args.py \
			  cli/resource/relations.py \
			  cli/resource/__init__.py \
			  cli/resource/parse_args.py \
			  cli/routing/dr.py \
			  cli/routing/node.py \
			  cli/routing/constraint.py \
			  cli/routing/cluster.py \
			  cli/routing/client.py \
			  cli/routing/stonith.py \
			  cli/routing/host.py \
			  cli/routing/config.py \
			  cli/routing/booth.py \
			  cli/routing/qdevice.py \
			  cli/routing/pcsd.py \
			  cli/routing/alert.py \
			  cli/routing/tag.py \
			  cli/routing/status.py \
			  cli/routing/quorum.py \
			  cli/routing/__init__.py \
			  cli/routing/prop.py \
			  cli/routing/resource.py \
			  cli/routing/acl.py \
			  cli/fencing_topology.py \
			  cli/file/metadata.py \
			  cli/file/__init__.py \
			  cli/constraint_colocation/command.py \
			  cli/constraint_colocation/__init__.py \
			  cli/cluster/command.py \
			  cli/cluster/__init__.py \
			  cli/__init__.py \
			  cli/rule.py \
			  cli/constraint_order/command.py \
			  cli/constraint_order/__init__.py \
			  cli/booth/env.py \
			  cli/booth/command.py \
			  cli/booth/__init__.py \
			  resource.py \
			  acl.py
